--- a/css/main.css
+++ b/css/main.css
@@ -5,15 +5,130 @@
 }
 nav[role="navigation"] {
 	height:63px;
-	background:#1D1B1B;
+	background:#333;
 	border-radius:0;
 	margin-bottom:0;
 }
 .hero {
 	margin-bottom:25px;
 }
+.hero img {
+	width:100%;
+}
+.marketing {
+	font-family: 'Roboto', sans-serif;
+	padding:0 25px;
+}
+.marketing h2 {
+	font-size:24px;
+	font-weight:400;
+}
+.marketing p {
+	padding-bottom:25px;
+	color:#878787;
+}
+.friends {
+	display:none;
+	color:rgba(255,255,255,.7);
+	margin-top:-9rem;
+	margin-bottom:4rem;
+}
+.friends h3 {
+	font-weight:400;
+	font-size:15px;
+	box-shadow:2px 2px 2px rgba(0,0,0,.5);
+	padding:0;
+	margin-bottom:5px;
+}
+.friends p {
+	color:rgba(255,255,255,.4);
+	font-size:13px;
+}
 
+footer {
+	background:#DADADA;
+	border-top:1px solid #666;
+	padding-bottom:75px;
+	padding-top:20px;
+}
 footer ul {
 	list-style-type:none;
 	padding-left:0;
+}
+footer ul:nth-of-type(n+2) {
+	background:red;
+}
+footer .hidden-xs {
+	float:right;
+}
+footer h3 {
+	font-weight:400;
+	font-size:20px;
+	padding-bottom:10px;
+}
+footer li {
+	font-size:18px;
+	line-height:22px;
+}
+
+
+/* buttons  */
+.buttons .btn {
+	padding:25px 0;
+	color:#fff;
+	margin-bottom:15px;
+	font-size:20px;
+}
+
+.btn-pink{
+	background: #ea8493;
+	border-radius:0;
+}
+.btn-yellow{
+	background: #ffcc66;
+	border-radius:25px;
+}
+.btn-blue{
+	background: #94AEF3;
+	border-radius:25px;
+}
+.btn-green{
+	background: #99ff99;
+	border-radius:0;
+	box-shadow:0px 2px 5px rgba(0,0,0,.33);
+}
+
+
+
+/* media queries */
+
+/* special case small size styles */
+@media (max-width:550px) {
+	.friends {
+		display:block;
+	}
+	.marketing p {
+		text-align:center;
+	}
+}
+/* medium size */
+@media (max-width:990px) and (min-width:768px) {
+	.btn-yellow{
+		width: 48%;
+    	margin-left: 26%;
+    	border-radius:0;
+	}
+	.btn-blue{
+		border-radius:0;
+	}
+	.marketing h2 {
+		padding:0 50px;
+	}
+}
+
+/* large size */
+@media (min-width:991px) {
+	.marketing h2 {
+		padding:0 50px;
+	}
 }
